fix for title getting cropped

--- a/wp-content/themes/indigo-wine/less/_producer.less
+++ b/wp-content/themes/indigo-wine/less/_producer.less
@@ -1,6 +1,16 @@
 .mb-2{
 	margin-bottom: 2em;
 }
+.tax-product_cat{
+		.hb-page-title{
+			& > h1,& > h2{
+			width: 100%;
+			  overflow: hidden;
+			  text-overflow: ellipsis;
+			  white-space: normal;
+		}
+	}
+}
 .producer
 {
 	&-list{
